--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="nl.vliegerverhalen.Rev_Trainer" android:installLocation="auto" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="26" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<application android:allowBackup="true" android:label="@string/app_name" />
 </manifest>
