--- a/iOS/RevTrainer.iOS.csproj
+++ b/iOS/RevTrainer.iOS.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>RevTrainer.iOS</RootNamespace>
     <AssemblyName>RevTrainer.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <ReleaseVersion>1.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
