--- a/RevTrainer.UnitTest/RevTrainer.UnitTest.csproj
+++ b/RevTrainer.UnitTest/RevTrainer.UnitTest.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>RevTrainer.UnitTest</RootNamespace>
     <AssemblyName>RevTrainer.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ReleaseVersion>1.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
