--- a/iOS/RevTrainer.iOS.csproj
+++ b/iOS/RevTrainer.iOS.csproj
@@ -193,7 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="ViewControllers\MainViewController.xib" />
+    <InterfaceDefinition Include="Main.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewControllers\" />
