--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -21,8 +21,6 @@
 		<integer>1</integer>
 		<integer>2</integer>
 	</array>
-	<key>UIMainNibFile</key>
-	<string>MainViewController</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -45,5 +43,7 @@
 	<false/>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 </dict>
 </plist>
