iOS Screenshot functionality
Almost done

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -45,5 +45,7 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 </dict>
 </plist>
